--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,95 @@
 @import "wireframe-zapdos-numbers/src/style.css";
 
 /* start here */
+.title {
+  .wrap {
+    position: relative;
+    z-index: 5;
+  }
+
+  .wrap::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    content: "";
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    padding: 50px 0 12px;
+    background-color: var(--ui-brand-color);
+    background-origin: padding-box;
+  }
+}
+
+.items-wrapper {
+  margin-bottom: 120px;
+
+  .item {
+    &__content {
+      position: relative;
+      flex-direction: column;
+      align-items: flex-start;
+      z-index: 5;
+
+      &__number,
+      &__text {
+        position: relative;
+        z-index: 5;
+      }
+
+      .item__text {
+        font-size: var(--ui-subtitle-size);
+        line-height: var(--ui-subtitle-line-height);
+        letter-spacing: 1.1px;
+      }
+
+      .item__number {
+        font-size: var(--ui-block-title-size);
+        letter-spacing: 3px;
+      }
+    }
+
+    &__content::after {
+      position: absolute;
+      left: 64px;
+      top: -15px;
+      content: "";
+      display: block;
+      width: 200px;
+      height: 200px;
+      background-color: #fafafa;
+      z-index: -1;
+    }
+  }
+}
+
+.item:nth-child(2) {
+  .item__text {
+    width: 156px;
+  }
+}
+
+.item:nth-child(3) {
+  .item__text {
+    width: 117px;
+  }
+
+  .item__number {
+    max-width: 225px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .items-wrapper {
+    margin-bottom: 50px;
+
+    .item:nth-child(2) {
+      margin-top: 70px;
+    }
+
+    .item:nth-child(3) {
+      margin-top: 40px;
+    }
+  }
+}
