--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,79 @@
 @import "wireframe-zapdos-about/src/style.css";
 
 /* start here */
+.section {
+  position: relative;
+  z-index: 0;
+
+  &::after {
+    content: "";
+    position: absolute;
+    width: 70%;
+    height: 77.5%;
+    right: 0;
+    bottom: 0;
+    background-color: #fafafa;
+    z-index: -1;
+  }
+}
+
+.article {
+  &__title {
+    margin-bottom: 37px;
+    font-size: calc( var(--ui-hero-title-size) * 0.8 );
+    color: var(--ui-heading-color);
+    letter-spacing: 2px;
+
+    > span:first-child {
+      box-shadow: inset 0 -32px 0 0 var(--ui-brand-color);
+    }
+  }
+
+  &__text {
+    margin-bottom: 12px;
+    font-size: var(--ui-subtitle-size);
+    line-height: 2.05;
+    letter-spacing: 1.1px;
+    white-space: pre-line;
+  }
+
+  &__picture {
+    box-shadow: 16px 16px 0 0 var(--ui-brand-color);
+  }
+}
+
+@media (min-width: 768px) {
+  .article {
+    flex-direction: row-reverse;
+
+    &__title {
+      font-size: var(--ui-hero-title-size);
+    }
+
+    &__content {
+      padding-right: 40px;
+    }
+
+    &__picture {
+      max-width: 470px;
+      height: 560px;
+    }
+  }
+}
+
+@media (min-width: 992px) {
+  .section {
+    padding: 122px 0 176px;
+  }
+
+  .article {
+    &__content {
+      padding-left: 100px;
+      padding-right: 0;
+    }
+
+    &__title {
+      margin-left: -100px;
+    }
+  }
+}
