--- a/src/style.css
+++ b/src/style.css
@@ -2,10 +2,6 @@
 
 /* start here */
 .section {
-  &__inner {
-    max-width: 625px;
-    border: solid 8px #ffeea6;
-    margin: 0;
-    padding: 80px 0 100px;
-  }
+  min-height: 820px;
+  text-align: left;
 }
