--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@
       position: absolute;
       top: 40px;
       left: 0;
-      z-index: 0;
+      z-index: -1;
       content: "";
       display: inline-block;
       width: 100%;
@@ -83,12 +83,15 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media (min-width: 768px) {
   .items-wrapper {
     margin-bottom: 120px;
   }
 
-  .item:nth-child(2),
+  .item:nth-child(2) {
+    margin-top: 0;
+  }
+
   .item:nth-child(3) {
     margin-top: 0;
   }
