--- a/src/style.css
+++ b/src/style.css
@@ -151,14 +151,32 @@
 }
 
 .title {
-  width: 100%;
+  width: auto;
   margin-bottom: 15px;
-  text-align: center;
   font-family: var(--ui-block-title-font-family);
-  font-size: var(--ui-block-title-size);
+  font-size: calc(var(--ui-block-title-size)*1.43);
   font-weight: var(--ui-block-title-font-weight);
   line-height: var(--ui-block-title-line-height);
   color: var(--ui-block-title-color);
+  display: inline-block;
+  text-align: left;
+  position: relative;
+  letter-spacing: 2px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    bottom: 3px;
+    width: 100%;
+    height: 40%;
+    background: var(--ui-light-accent-color);
+    z-index: 10;
+  }
+}
+
+.title span {
+  position: relative;
+  z-index: 100;
 }
 
 .subtitle {
@@ -200,7 +218,74 @@
   flex-basis: 100%;
   width: 100%;
   text-align: center;
-  background-color: #ebeaea;
+  display: flex;
+  flex-direction: column-reverse;
+  flex-wrap: nowrap;
+  justify-content: flex-end;
+  background-color: var(--ui-block-bg);
+  position: relative;
+  font-size: calc(var(--ui-text-size)*0.85);
+  line-height: var(--ui-text-line-height);
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.08);
+  border: solid 1px #eee;
+  border-bottom: 8px solid var(--ui-light-accent-color);
+
+  $__price {
+    order: 2;
+
+    &-count {
+      font-size: calc(var(--ui-block-title-size)*1.43);
+      letter-spacing: 2px;
+    }
+
+    &-count span {
+      position: relative;
+
+      &::before {
+        content: "$";
+        font-size: 18px;
+        font-weight: 700;
+        position: absolute;
+        top: 10px;
+        left: -10px;
+      }
+    }
+  }
+
+  &__title {
+    margin-bottom: 25px;
+    font-family: var(--ui-heading-font-family);
+    font-size: var(--ui-heading-size);
+    font-weight: var(--ui-heading-font-weight);
+    line-height: var(--ui-heading-line-height);
+    color: var(--ui-heading-color);
+    height: 66px;
+    display: flex;
+    justify-content: center;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    order: 2;
+
+    &::before {
+      content: "";
+      width: 100%;
+      height: 66px;
+      position: absolute;
+      left: 0;
+      right: 0;
+      background: var(--ui-light-accent-color);
+      z-index: 10;
+    }
+  }
+
+  &__title span {
+    position: relative;
+    z-index: 100;
+    align-self: center;
+  }
+
 }
 
 @media (min-width: 768px) {
@@ -214,15 +299,6 @@
   .plan {
     padding: 50px;
   }
-}
-
-.plan__title {
-  margin-bottom: 25px;
-  font-family: var(--ui-heading-font-family);
-  font-size: var(--ui-heading-size);
-  font-weight: var(--ui-heading-font-weight);
-  line-height: var(--ui-heading-line-height);
-  color: var(--ui-heading-color);
 }
 
 .plan__icon-wrapper {
@@ -240,6 +316,7 @@
   line-height: var(--ui-caption-line-height);
   color: var(--ui-caption-color);
   margin-bottom: 30px;
+  order: 2;
 }
 
 .plan__price-count {
@@ -249,10 +326,11 @@
   font-weight: var(--ui-heading-lg-font-weight);
   line-height: var(--ui-heading-lg-line-height);
   color: var(--ui-heading-lg-color);
+
 }
 
 .plan__list-item {
-  margin-bottom: 15px;
+  margin-bottom: 28px;
 }
 
 .plan__list-item:last-child {
@@ -330,4 +408,8 @@
 .link:active,
 .link:focus {
   color: var(--ui-link-hover-color);
+}
+
+.collection {
+  order: 3;
 }
