--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,74 @@
 @import "wireframe-zapdos-services/src/style.css";
 
 /* start here */
+
+.title {
+  text-align: left;
+  color: var(--ui-heading-color);
+
+  span {
+    position: relative;
+    z-index: 1;
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 31px;
+      bottom: 0;
+      left: 0;
+      background-color: var(--ui-brand-color);
+      z-index: -1;
+    }
+  }
+}
+
+.article {
+  margin-top: 38px;
+
+  &__picture-wrapper {
+    margin-bottom: 15px;
+  }
+
+  &__picture {
+    background: var(--ui-light-shade-color);
+  }
+
+  &__image {
+    height: 91%;
+  }
+
+  &__title {
+    font-size: var(--ui-caption-size);
+    text-transform: uppercase;
+    position: relative;
+
+    span {
+      position: absolute;
+      top: -48px;
+      left: 20px;
+      display: inline-block;
+
+      @media (min-width: 480px) {
+        left: 36px;
+        top: -61px;
+      }
+    }
+
+  }
+
+  &__text {
+    padding-left: 22px;
+
+    @media (min-width: 480px) {
+      padding-left: 41px;
+    }
+
+    span {
+      border-bottom: 4px solid  #eee;
+      padding-bottom: 30px;
+      display: inline-block;
+    }
+  }
+
+}
