--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,15 @@
 @import "wireframe-zapdos-header/src/style.css";
 
 /* start here */
+.nav {
+  justify-content: flex-start;
+}
+
+.header__button {
+  text-transform: uppercase;
+  font-size: calc(var(--ui-small-text-size) * 0.93);
+  border: 2px solid var(--ui-btn-primary-bg);
+  border-radius: 10px;
+  background-color: var(--ui-light-shade-color);
+  color: #000;
+}
