--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,9 @@
 @import "wireframe-zapdos-header/src/style.css";
 
+.header {
+  background-color: #fff;
+}
+
 .nav {
   justify-content: center;
 }
